[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdl"
version = "0.1.0"
description = "Temporal Difference Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "scipy>=1.15.2",
]

[project.optional-dependencies]
examples = [
    "jupyterlab>=4.2.0,<5",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/tdl"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tdl",
    "README.md",
    "CHANGELOG.md",
    "AGENTS.md",
    "pyproject.toml",
]
